--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -5,56 +5,57 @@
   <package id="bootstrap.less" version="3.4.1" targetFramework="net472" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net472" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net472" />
-  <package id="CsvHelper" version="12.1.2" targetFramework="net472" />
+  <package id="CsvHelper" version="12.2.2" targetFramework="net472" />
   <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
   <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="7.4.2" targetFramework="net472" />
-  <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
-  <package id="HlidacStatu.Api.Dataset.Connector" version="1.2.2" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
+  <package id="HlidacStatu.Api.Dataset.Connector" version="1.3.3" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net472" />
-  <package id="IPNetwork2" version="2.4.0.126" targetFramework="net472" />
+  <package id="IPNetwork2" version="2.4.0.163" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
-  <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
+  <package id="jQuery.Validation" version="1.19.1" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights" version="2.10.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights" version="2.12.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net472" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.12.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.12.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.12.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.12.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.12.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.12.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net472" />
-  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.5" targetFramework="net472" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
-  <package id="Microsoft.Net.Compilers" version="3.2.1" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.Facebook" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.Google" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.Twitter" version="4.0.1" targetFramework="net472" />
+  <package id="Microsoft.Net.Compilers" version="3.4.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Facebook" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Google" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Twitter" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Moment.js" version="2.24.0" targetFramework="net472" />
-  <package id="NEST" version="7.4.2" targetFramework="net472" />
+  <package id="NEST" version="7.5.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Schema" version="3.0.11" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
@@ -65,27 +66,29 @@
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
   <package id="System.Console" version="4.3.1" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
   <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Watcher" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Reflection.TypeExtensions" version="4.5.1" targetFramework="net472" />
+  <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="4.7.0" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
