--- a/Plugin.TransparetniUcty/packages.config
+++ b/Plugin.TransparetniUcty/packages.config
@@ -2,14 +2,17 @@
 <packages>
   <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="7.4.2" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
   <package id="EPPlus" version="4.5.3.2" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
-  <package id="NEST" version="7.4.2" targetFramework="net472" />
+  <package id="NEST" version="7.5.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
 </packages>
