--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -9,6 +9,7 @@
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="Devmasters.Render" version="1.472.1.1" targetFramework="net472" />
+  <package id="Dynamitey" version="2.0.10.189" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
   <package id="EMGU.CV" version="4.1.1.3497" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
