--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -510,6 +510,7 @@
     <Compile Include="Data\Graphs\Graph.GraphJson.cs" />
     <Compile Include="Data\Graphs\Graph.Node.cs" />
     <Compile Include="Data\Graphs\Graph.NodeComparer.cs" />
+    <Compile Include="Data\Graphs\Graph.Shortest.Dijkstras.cs" />
     <Compile Include="Data\Insolvence\Dokument.cs" />
     <Compile Include="Data\Insolvence\Insolvence.Search.cs" />
     <Compile Include="Data\Insolvence\Insolvence.cs" />
